[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robustsafe-rl-lab"
version = "0.0.1"
description = "Minimal benchmarks and algorithms for robust constrained reinforcement learning."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Zixin Lin"}
]
dependencies = [
    "numpy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["robustsafe_rl*"]